--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ html,body{
     /* 色相 饱和度  亮度 */
     background: hsl(194,66%,49%);
     transition: background .2s;
+    overflow: hidden;
 }
 .player {
     position: absolute;
@@ -123,9 +124,9 @@ html,body{
 } */
 .player .player_backMask{
     position: absolute;
-    width: 95%;
+    width: 90%;
     height: 100%;
-    left: 2.5%;
+    left: 5%;
     top: 0px;
     border-radius: 5px;
     background:rgba(240, 224, 11, 0.63);
@@ -135,7 +136,7 @@ html,body{
     font-size: 15px;
 }
 .player .player_timeLine{
-    width: 220px;
+    width: 90%;
     height: 4px;
     position: absolute;
     right:2%;
@@ -166,14 +167,14 @@ html,body{
     box-shadow: 0 0 50px #ffff77;
 }
 .rishi .circle.moon{
-    left:52%;
+    left:40%;
     cursor: pointer;
     box-shadow: inset 5px 5px 50px rgba(255,255,119,0.3);
 }
 .rishi .pre {
     position: absolute;
     top: 75%;
-    left: 36%;
+    left: 40%;
     width: 10%;
     height: 40px;
     text-align: center;
