--- a/index.css
+++ b/index.css
@@ -150,14 +150,14 @@ html,body{
 }
 .rishi{
     position: relative;
-    width:30%;
-    height:30%;
+    width:35%;
+    height:35%;
     margin:0 auto;
 }
 .rishi .circle{
     position: absolute;
-    width: 20%;
-    padding-top: 20%;
+    width: 30%;
+    padding-top: 30%;
     border-radius: 50%;
     left:30%;
     top:30%;
@@ -173,7 +173,7 @@ html,body{
 }
 .rishi .pre {
     position: absolute;
-    top: 75%;
+    top: 10%;
     left: 40%;
     width: 10%;
     height: 40px;
@@ -201,6 +201,6 @@ html,body{
     line-height: 30px;
     transition: .7s;
 }
-.lrc-container ul li.active{
+.lrc-container ul li.li-active{
     color: #fff;
 }
